<resources>
    <string name="app_name">BotteBeta</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment test</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="text_1">Bienvenue dans Botte Béta</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="discord">Discord</string>
    <string name="twitch">Twitch</string>
    <string name="voix_fille">Voix Fille</string>
    <string name="botte_beta">Botte Béta</string>
    <string name="alpha">alpha</string>
    <string name="voix_gars">Voix Gars</string>
    <string name="desc_img">image</string>
</resources>